--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,16 @@ requires-python = ">=3.10"
 keywords = ["pagoda", "mcp"]
 license = { text = "MIT" }
 dependencies = [
-    "click>=8.1.8",
-    "mcp>=1.6.0",
     "requests>=2.32.3",
+    "click>=8.1.8",
+    "mcp>=1.10.0",
+    "anyio>=4.5",
+    "httpx>=0.27",
+    "pydantic>=2.0",
+    "pydantic-settings>=2.5.2",
+    "sse-starlette>=1.6.1",
+    "uvicorn>=0.23.1; sys_platform != 'emscripten'",
+    "python-dotenv>=1.1.1",
 ]
 
 [project.scripts]
