--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "mcp-pagoda"
 version = "0.0.1"
 description = "A MCP Server for Pagoda"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11,<3.14"
 keywords = ["pagoda", "mcp"]
 license = { text = "MIT" }
 dependencies = [
